example-aPage-anotherPage

--- a/contactus.html
+++ b/contactus.html
@@ -67,10 +67,10 @@
 
         <!-- search bar -->
         <form>
-            <label for="search">Search</label><br>
+            <label for="search"  class="searchbar">Search</label><br>
             <input type="text" placeholder="Enter Keywords....">
             <!-- ptr -->
-            <input type="image"  src="img/searchButton.jpg" alt="submit">
+            <input type="image"  src="img/searchButton.jpg" alt="submit"  class="searching">
         </form>
         </div>
         <!-- footer -->
