--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
             <label for="search" class="searchbar">Search</label><br>
             <input type="text" placeholder="Enter Keywords....">
             <!-- ptr -->
-            <input type="image"  src="./img/search.png"  class="searchimg" alt="submit">
+            <input type="image"  src="./img/search.png"  class="searching" alt="submit">
         </form>
-        </div>
+    </div>
         </div>
         <!-- footer -->
         <div class="bottom">
