--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <a href="./index.html">HOME | </a>
             <a href="./example.html">EXAMPLE | </a>
             <a href="./apage.html">A PAGE | </a>
-            <a href="./anotherpage.html">ANOTHER | PAGE</a>
+            <a href="./anotherpage.html">ANOTHER PAGE | </a>
             <a href="./contactus.html">CONTACT US  </a>
         </p>
         
