update to reponsive site

--- a/apage.html
+++ b/apage.html
@@ -77,7 +77,7 @@
             <!-- search bar -->
             <form>
                 <label for="search" class="searchbar">Search</label><br>
-                <input type="text" placeholder="Enter Keywords....">
+                <input type="text" placeholder="Enter Keywords...." class="size">
                 <!-- ptr -->
                 <input type="image"  src="./img/search.png"  class="searching" alt="submit">
             </form>
