--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
         <!-- search bar -->
         <form>
             <label for="search" class="searchbar">Search</label><br>
-            <input type="text" placeholder="Enter Keywords....">
+            <input type="text" placeholder="Enter Keywords...." class="size">
             <!-- ptr -->
             <input type="image"  src="./img/search.png"  class="searching" alt="submit">
         </form>
     </div>
-        </div>
+    </div>
         <!-- footer -->
         <div class="bottom">
         <p>
@@ -109,6 +109,7 @@
             <a href="#">CSS | </a></li>
             <a href="#">DESIGN FROM HTML5WEBTEMP.CO.IN</a>
             </p>
+        </div>
         </div>
 </body>
 </html>
