--- a/anotherpage.html
+++ b/anotherpage.html
@@ -75,7 +75,7 @@
         <!-- search bar -->
         <form>
             <label for="search"  class="searchbar">Search</label><br>
-            <input type="text" placeholder="Enter Keywords....">
+            <input type="text" placeholder="Enter Keywords...." class="size">
             <!-- ptr -->
             <input type="image"  src="./img/search.png" alt="submit"  class="searching">
         </form>
